--- a/viloes.html
+++ b/viloes.html
@@ -27,7 +27,7 @@
        
             <div class="conteudo-principal-box">
             <h2 class="conteudo-principal-h2">Kaido</h2>
-            <img class="conteudo-principal-imagem" src="imagens/Kaidou.png" alt="Kaido">
+            <img class="conteudo-principal-imagem" src="imagens/kaido.jpeg" alt="Kaido">
             <p class="conteudo-principal-paragrafo">
         Temos o pirata que está em destaque no anime e mangá. Conhecido como a Criatura Mais Forte do Mundo e também um dos poucos que espancou o Luffy no mano a mano. 
         Além disso, vale destacar seu exército composto por inúmeros piratas, em especial os Grandes Astros. Sem contar sua Akuma no Mi do tipo zoan mítica que lhe permite se transformar em um dragão! 
